fix image display on small devices

--- a/static/css/ratings.css
+++ b/static/css/ratings.css
@@ -1,7 +1,11 @@
 /* all submissions */
+.carousel-inner {
+    width: calc(100% - 40px);
+    margin: 0 auto;
+}
+
 .carousel-control-next, .carousel-control-prev {
     color: var(--primary);
-    bottom: -250px;
     width: 15px;
 }
 
@@ -10,8 +14,8 @@
 }
 
 .carousel-inner > .carousel-item > img {
-    width: auto;
-    height: 50vh;
+    width: 100%;
+    max-height: 50vh;
 }
 
 .carousel-caption {
@@ -179,8 +183,17 @@
 
 /* TABLET STYLES */
 @media screen and (min-width: 769px) {
-
     /* all submissions */
+    .carousel-inner {
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    .carousel-inner > .carousel-item > img {
+        width: auto;
+        height: 50vh;
+    }
+
     /* adjustments for rating input dials */
     .firstRing {
         height: 100px;
@@ -199,7 +212,7 @@
         border: solid 1px #CCC;
     }
 
-    .difficultyLevel.level-1:hover .thirdRing, .difficultyLevel.level-1:hover .firstRing{
+    .difficultyLevel.level-1:hover .thirdRing, .difficultyLevel.level-1:hover .firstRing {
         background-color: #00D1B2;
         background-image: linear-gradient(.5turn, #45DDC7, #00D1B2, #45DDC7 100%);
     }
@@ -209,7 +222,7 @@
         background-image: linear-gradient(.5turn, #6999E5, #3273DC, #6999E5 100%);
     }
 
-    .difficultyLevel.level-3:hover .thirdRing, .difficultyLevel.level-3:hover .firstRing{
+    .difficultyLevel.level-3:hover .thirdRing, .difficultyLevel.level-3:hover .firstRing {
         background-color: #FF6B89;
         background-image: linear-gradient(.5turn, #FFA0B3, #FF6B89, #FFA0B3 100%);
     }
